Refactored MainController and service for response